--- a/Home.html
+++ b/Home.html
@@ -8,6 +8,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="Home.css" />
     <title>egio</title>
   </head>
@@ -26,5 +32,55 @@
         <i class="fas fa-cart-shopping"></i>
       </div>
     </header>
+    <hr />
+
+    <!-- this is the navbar -->
+
+    <div class="nav-bar">
+      <nav class="navbar navbar-expand-lg navbar-light mx-auto">
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#"
+                >ACCUEIL <span class="sr-only"></span
+              ></a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdownMenuLink"
+                >PRODUITS</a
+              >
+              <div
+                class="dropdown-menu"
+                aria-labelledby="navbarDropdownMenuLink"
+              ></div>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdownMenuLink"
+                >SERVICES</a
+              >
+              <div
+                class="dropdown-menu"
+                aria-labelledby="navbarDropdownMenuLink"
+              ></div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"> QUI SOMMES-NOUS ? </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">EXPÉRIENCE</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">INFO/CONTACT</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </body>
 </html>
