--- a/Home.html
+++ b/Home.html
@@ -16,11 +16,12 @@
     />
     <link rel="stylesheet" href="Home.css" />
     <title>egio</title>
+   
   </head>
   <body>
     <header>
       <div class="logo">
-        <img src="assets/logo health.png" alt="Your Logo" />
+        <img src="assets/logo-health.png" alt="Your Logo" />
       </div>
       <div class="search-bar">
         <input type="text" placeholder="Search For Products and Services" />
@@ -82,5 +83,30 @@
         </div>
       </nav>
     </div>
+
+<!-- this is the home page  -->
+
+    <div class="home-page">
+        
+<div class="slider-container">
+    <img class="slider-image" src="./assets/pharmacist-checking-medicines-drugstore.png" alt="Image 1">
+    <button class="slider-btn prev-btn" onclick="prevSlide()"><i class="fa-solid fa-chevron-left"></i></button>
+    <button class="slider-btn next-btn" onclick="nextSlide()"><i class="fa-solid fa-chevron-right"></i></button>
+  </div>
+        <div class="overlay">
+          <h2>Votre<br/> solution santé</h2>
+          
+          <p>
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+            nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
+            erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+            et ea rebum. Stet
+          </p>
+          <button>Savoir Plus</button>
+        </div>
+
+      </div>
+    </div>
+    <script src="index.js" ></script>
   </body>
 </html>
