--- a/Home.html
+++ b/Home.html
@@ -91,8 +91,21 @@
       <div class="product-container" id="cardList">
 
       </div>
+    </div> 
+
+    <hr>
+
+    <!-- conseils section  -->
+    <div class="conseils-section">
+      <h3>Nos conseils santé</h3>
+      <div class="conseils-card-container" id="conseilsCardContainer">
+        <!-- Cards will be dynamically added here using JavaScript -->
+      </div>
     </div>
-    
+
+
+
+
 
     <script src="index.js"></script>
   </body>
