--- a/Home.html
+++ b/Home.html
@@ -16,7 +16,6 @@
     />
     <link rel="stylesheet" href="Home.css" />
     <title>egio</title>
-   
   </head>
   <body>
     <header>
@@ -41,15 +40,33 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">ACCUEIL <span class="sr-only"></span></a>
+              <a class="nav-link" href="#"
+                >ACCUEIL <span class="sr-only"></span
+              ></a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink">PRODUITS</a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"></div>
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdownMenuLink"
+                >PRODUITS</a
+              >
+              <div
+                class="dropdown-menu"
+                aria-labelledby="navbarDropdownMenuLink"
+              ></div>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink">SERVICES</a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink"></div>
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdownMenuLink"
+                >SERVICES</a
+              >
+              <div
+                class="dropdown-menu"
+                aria-labelledby="navbarDropdownMenuLink"
+              ></div>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#"> QUI SOMMES-NOUS ? </a>
@@ -68,17 +85,28 @@
     <!-- Home Page -->
     <div class="home-page">
       <div class="slider-container">
-        <img class="slider-image" src="./assets/pharmacist-checking-medicines-drugstore.png" alt="Image 1">
-        <button class="slider-btn prev-btn" onclick="prevSlide()"><i class="fa-solid fa-chevron-left"></i></button>
-        <button class="slider-btn next-btn" onclick="nextSlide()"><i class="fa-solid fa-chevron-right"></i></button>
+        <img
+          class="slider-image"
+          src="./assets/pharmacist-checking-medicines-drugstore.png"
+          alt="Image 1"
+        />
+        <button class="slider-btn prev-btn" onclick="prevSlide()">
+          <i class="fa-solid fa-chevron-left"></i>
+        </button>
+        <button class="slider-btn next-btn" onclick="nextSlide()">
+          <i class="fa-solid fa-chevron-right"></i>
+        </button>
       </div>
       <div class="overlay">
-        <h2>Votre<br/> solution santé</h2>
+        <h2>
+          Votre<br />
+          solution santé
+        </h2>
         <p>
           Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-          nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-          erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-          et ea rebum. Stet
+          nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+          sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
+          rebum. Stet
         </p>
         <button>Savoir Plus</button>
       </div>
@@ -87,25 +115,23 @@
     <!-- Product Section -->
     <div class="product-section">
       <h3>BEST SELLER ORTHOPÉDIE</h3>
-      <hr>
-      <div class="product-container" id="cardList">
+      <hr />
+      <div class="product-container" id="cardList"></div>
+    </div>
 
-      </div>
-    </div> 
-
-    <hr>
+    <hr />
 
     <!-- conseils section  -->
     <div class="conseils-section">
       <h3>Nos conseils santé</h3>
-      <div class="conseils-card-container" id="conseilsCardContainer">
-       
-      </div>
+      <div class="conseils-card-container" id="conseilsCardContainer"></div>
     </div>
 
-
-
-
+    <!-- contact section -->
+    <div class="contact-section">
+      <div class="cards-container" id="cardsContainer"></div>
+      
+    </div>
 
     <script src="index.js"></script>
   </body>
