contact-section done

--- a/Home.html
+++ b/Home.html
@@ -129,8 +129,7 @@
 
     <!-- contact section -->
     <div class="contact-section">
-      <div class="cards-container" id="cardsContainer"></div>
-      
+      <div id="cardsContainer" class="cards-container"></div>
     </div>
 
     <script src="index.js"></script>
