--- a/Home.html
+++ b/Home.html
@@ -132,6 +132,13 @@
       <div id="cardsContainer" class="cards-container"></div>
     </div>
 
+    <!-- partenaires-section -->
+    <div class="partenaires-section" id="partnersSection">
+      <h3>NOS PARTNERES</h3>
+      <div class="partners-container" id="partnersContainer"></div>
+    </div>
+    
+
     <script src="index.js"></script>
   </body>
 </html>
