--- a/Home.html
+++ b/Home.html
@@ -137,6 +137,44 @@
       <h3>NOS PARTNERES</h3>
       <div class="partners-container" id="partnersContainer"></div>
     </div>
+
+    <!-- learn-section -->
+    <div class="learn-section">
+      <div class="content-left">
+        <h3>achat de médicaments et de produits de paramédical sur internet</h3>
+        <hr />
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis risus
+          mi. Ut placerat quam lectus. Curabitur dictum velit non lacus ornare
+          tempor. Nullam quis augue in leo aliquet malesuada sit amet eget eros.
+          Sed laoreet posuere velit sit amet varius. Nulla eget purus non erat
+          fringilla sodales vel a nulla. Cras sit amet tempus risus. Fusce
+          dignissim blandit justo, eget elementum risus tristique a. Nunc
+          fringilla lacus lacus, sit amet accumsan est pulvinar non. Praesent
+          tristique enim lorem. Phasellus a auctor lacus. Proin vitae accumsan
+          nunc.
+        </p>
+        <h3>Votre paramédical en ligne</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis risus
+          mi. Ut placerat quam lectus. Curabitur dictum velit non lacus ornare
+          tempor. Nullam quis augue in leo aliquet malesuada sit amet eget eros.
+          Sed laoreet posuere velit sit amet varius. Nulla eget purus non erat
+          fringilla sodales vel a nulla. Cras sit amet tempus risus. Fusce
+          dignissim blandit justo, eget elementum risus tristique a. Nunc
+          fringilla lacus lacus, sit amet accumsan est pulvinar non. Praesent
+          tristique enim lorem. Phasellus a auctor lacus. Proin vitae accumsan
+          nunc.Integer ac interdum lacus. Nunc porta semper lacus a varius.
+          Pellentesque habitant morbi tristique senectus et netus et malesuada
+          fames ac turpis egestas. Nunc sagittis consectetur velit, ac gravida
+          nunc gravida et. Vestibulum at eros imperdiet, volutpat nunc vitae,
+          ornare erat. Proin interdum aliquet porta. Fusce ut semper ligula.
+        </p>
+      </div>
+      <div class="image-right">
+        <img src="assets/conseils1.png" alt="Conseils">
+      </div>
+    </div>
     
 
     <script src="index.js"></script>
