aventage-section done

--- a/Home.html
+++ b/Home.html
@@ -144,24 +144,24 @@
         <h3>achat de médicaments et de produits de paramédical sur internet</h3>
         <hr />
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis risus
-          mi. Ut placerat quam lectus. Curabitur dictum velit non lacus ornare
-          tempor. Nullam quis augue in leo aliquet malesuada sit amet eget eros.
-          Sed laoreet posuere velit sit amet varius. Nulla eget purus non erat
-          fringilla sodales vel a nulla. Cras sit amet tempus risus. Fusce
-          dignissim blandit justo, eget elementum risus tristique a. Nunc
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis
+          risus mi. Ut placerat quam lectus. Curabitur dictum velit non lacus
+          ornare tempor. Nullam quis augue in leo aliquet malesuada sit amet
+          eget eros. Sed laoreet posuere velit sit amet varius. Nulla eget purus
+          non erat fringilla sodales vel a nulla. Cras sit amet tempus risus.
+          Fusce dignissim blandit justo, eget elementum risus tristique a. Nunc
           fringilla lacus lacus, sit amet accumsan est pulvinar non. Praesent
           tristique enim lorem. Phasellus a auctor lacus. Proin vitae accumsan
           nunc.
         </p>
         <h3>Votre paramédical en ligne</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis risus
-          mi. Ut placerat quam lectus. Curabitur dictum velit non lacus ornare
-          tempor. Nullam quis augue in leo aliquet malesuada sit amet eget eros.
-          Sed laoreet posuere velit sit amet varius. Nulla eget purus non erat
-          fringilla sodales vel a nulla. Cras sit amet tempus risus. Fusce
-          dignissim blandit justo, eget elementum risus tristique a. Nunc
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis
+          risus mi. Ut placerat quam lectus. Curabitur dictum velit non lacus
+          ornare tempor. Nullam quis augue in leo aliquet malesuada sit amet
+          eget eros. Sed laoreet posuere velit sit amet varius. Nulla eget purus
+          non erat fringilla sodales vel a nulla. Cras sit amet tempus risus.
+          Fusce dignissim blandit justo, eget elementum risus tristique a. Nunc
           fringilla lacus lacus, sit amet accumsan est pulvinar non. Praesent
           tristique enim lorem. Phasellus a auctor lacus. Proin vitae accumsan
           nunc.Integer ac interdum lacus. Nunc porta semper lacus a varius.
@@ -172,10 +172,15 @@
         </p>
       </div>
       <div class="image-right">
-        <img src="assets/conseils1.png" alt="Conseils">
+        <img src="assets/conseils1.png" alt="Conseils" />
       </div>
     </div>
-    
+
+    <!-- aventage-section -->
+    <div class="aventage">
+      <h3>LES AVANTAGES</h3>
+      <div class="aventage-section" id="aventageContainer"></div>
+    </div>
 
     <script src="index.js"></script>
   </body>
