--- a/Home.html
+++ b/Home.html
@@ -182,6 +182,18 @@
       <div class="aventage-section" id="aventageContainer"></div>
     </div>
 
+    <!-- contact-nous-section -->
+    <div class="contact-nous">
+      <div class="images-container">
+        <img src="assets/contacter-nous1.png" class="image-left" />
+        <img src="assets/contacter-nous2.png" class="image-right" />
+      </div>
+      <div class="overlay-content">
+        <h3>Pour plus d'informations, contactez-nous !</h3>
+        <button>Accéder au formulaire de contact</button>
+      </div>
+    </div>
+
     <script src="index.js"></script>
   </body>
 </html>
