footer-section done

--- a/Home.html
+++ b/Home.html
@@ -194,6 +194,40 @@
       </div>
     </div>
 
+    <footer class="footer-section">
+      <div class="footer-column">
+        <h3>MEDICALLIANCE</h3>
+        <p>
+          2, rue des Satellites Parc Technologique du Canal 31520 RAMONVILLE
+          SAINT-AGNE
+        </p>
+      </div>
+      <div class="footer-column">
+        <h3>Nos services</h3>
+        <p>
+          Réparation et entretien Collecte de matériel médical Dépôt des DASRI
+          Bien-Etre Académie
+        </p>
+      </div>
+      <div class="footer-column">
+        <h3>Nos produits</h3>
+        <p>
+          Maintien à domicile Handicap Enfant Handicap adulte Professionnels de
+          santé Ergonomie au travail
+        </p>
+      </div>
+      <div class="footer-column">
+        <h3>FOLLOW</h3>
+        <p>Facebook<br> Instagram <br>Twitter</p>
+      </div>
+      <div class="footer-special">
+        <img src="assets/Groupe 172.png">
+        <hr>
+        <h5>© Mediclub - 2020. Tous droits réservés.</h5>
+      </div>
+    </footer>
+    
+    
     <script src="index.js"></script>
   </body>
 </html>
